kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  namespace: game
spec:
  # tells deployment to run 1 pods matching the template
  replicas: 2
  # create pods using the pod definition in this template
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      # name is automatically generated based on the deployment.name
      labels:
        app: game
    spec:
      containers:
      - name: tetris
        image: lrakai/tetris:latest
        ports:
        - containerPort: 80
