kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-game
  namespace: game
spec:
  rules:
  - host: "cplane"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game
            port:
              number: 80
